style: item list clocks vs. sticky list header z-index fix

--- a/styles/css/global/sheet.css
+++ b/styles/css/global/sheet.css
@@ -405,6 +405,7 @@
 			.favorites-table .fu-table__header {
 				position: sticky;
 				top: 0;
+				z-index: 10;
 			}
 		}
 	}
